Bug 1464785 - Use native scrollbars in devtools dark theme for windows;r=pbro
MozReview-Commit-ID: IXbpqdEKdi1

UltraBlame original commit: 86fcc230d64d74329c2e517c300ec3e5289c2a32

--- a/devtools/client/themes/dark-theme.css
+++ b/devtools/client/themes/dark-theme.css
@@ -27,6 +27,13 @@ body {
   color: var(--theme-selection-color);
 }
 
+:root[platform="win"] {
+  
+  
+  scrollbar-face-color: var(--theme-body-color-inactive);
+  scrollbar-track-color: var(--theme-splitter-color);
+}
+
 .theme-selected,
 .CodeMirror-hint-active {
   background-color: var(--theme-selection-background);
